--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/PRUEBAS_LOGIN.csproj
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/PRUEBAS_LOGIN.csproj
@@ -134,6 +134,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Inventario.cs" />
+    <Compile Include="Models\ServicioMantenimiento.cs" />
+    <Compile Include="Models\TipoMantenimiento.cs" />
     <Compile Include="Models\Vehiculo.cs" />
     <Compile Include="Models\TipoVehiculo.cs" />
     <Compile Include="Models\Usuario.cs" />
