--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Web.config
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obtener más información acerca de cómo configurar la aplicación ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="PRUEBAS_LOGINContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=PRUEBAS_LOGINContext-20230621142602; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|PRUEBAS_LOGINContext-20230621142602.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="PRUEBAS_LOGINContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=PRUEBAS_LOGINContext-20230621142602; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|PRUEBAS_LOGINContext-20230621142602.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
